# distributed-job-scheduler-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  architecture.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: app_state.rs  lib.rs  server.rs
crates/api/src/handlers/: auth.rs  dlq.rs  health.rs  jobs.rs  metrics.rs  mod.rs  projects.rs  queues.rs  websocket.rs  workflows.rs
crates/api/src/middleware/: auth_middleware.rs  correlation_id.rs  mod.rs  rate_limit.rs
crates/api/src/routes/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: correlation.rs  errors.rs  lib.rs  tracing_setup.rs
crates/domain/: Cargo.toml
crates/domain/src/: enums.rs  error.rs  lib.rs
crates/domain/src/entities/: dlq.rs  job.rs  mod.rs  outbox.rs  project.rs  queue.rs  retry_policy.rs  user.rs  worker.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: circuit_breaker.rs  db.rs  lib.rs  llm.rs  outbox_relay.rs  redis_client.rs
crates/repositories/: Cargo.toml
crates/repositories/src/: dlq_repository.rs  job_repository.rs  lib.rs  outbox_repository.rs  project_repository.rs  queue_repository.rs  user_repository.rs  worker_repository.rs
crates/scheduler-core/: Cargo.toml
crates/scheduler-core/src/: cron_scheduler.rs  lib.rs  recurring.rs  stale_recovery.rs
crates/services/: Cargo.toml
crates/services/src/: auth_service.rs  dlq_service.rs  job_service.rs  lib.rs  project_service.rs  queue_service.rs  workflow_service.rs
crates/worker/: Cargo.toml
crates/worker/src/: app_state.rs  executor.rs  heartbeat.rs  lib.rs  poller.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
migrations/: 0001_initial_schema.sql
src/: main.rs
