[workspace]
members = [
    ".",
    "crates/domain",
    "crates/common",
    "crates/repositories",
    "crates/services",
    "crates/api",
    "crates/worker",
    "crates/scheduler-core",
    "crates/infrastructure",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Auth / JWT
jsonwebtoken = "9"
bcrypt = "0.15"

# UUIDs & Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cron parsing
cron = "0.12"

# Tracing / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Config
config = "0.14"
dotenvy = "0.15"

# HTTP Client (for LLM)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Misc
async-trait = "0.1"
once_cell = "1"
rand = "0.8"
hostname = "0.3"
futures-util = "0.3"

[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "crates/api" }
common = { path = "crates/common" }
infrastructure = { path = "crates/infrastructure" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
hostname = { workspace = true }
worker = { path = "crates/worker" }
repositories = { path = "crates/repositories" }
scheduler-core = { path = "crates/scheduler-core" }
uuid = { workspace = true }
sqlx = { workspace = true }
