[package]
name = "repositories"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
