[package]
name = "scheduler-core"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
repositories = { path = "../repositories" }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
