[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
services = { path = "../services" }
repositories = { path = "../repositories" }
infrastructure = { path = "../infrastructure" }
scheduler-core = { path = "../scheduler-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
cron = { workspace = true }
